syntax = "proto3";

package api;

message AddUser {
    double user_id = 1;
    string base_question = 2;
    string first_guestion = 3;
    string second_guestion = 4;
    // TODO
}

message User {
    double user_id = 1;
}

message Answer {
    double user_id = 1;
    string answer = 3;
    double index = 2;
}

message Question {
    double user_id = 1;
    string title = 2;
    string question = 3;
    string answer = 4;
    string number = 5;
}

message SurveyRespone {
    repeated Question qs = 1;
}

message StatusResponse {
    string message = 1;
}

service ICHSurvey {
    rpc AddCandidate(AddUser) returns (StatusResponse) {}
    rpc DeleteCandidate(User) returns (StatusResponse) {}
    rpc UpdateCandidate(User) returns (StatusResponse) {}
    rpc AddAnswer(Answer) returns (StatusResponse) {}
    rpc GetSurveyForCandidate(User) returns (SurveyRespone) {}
    rpc GetAnswersOfCandidate(User) returns (SurveyRespone) {}
    rpc GetStatusOfCandidate(User) returns (StatusResponse)
} 